# gino

./: Makefile  README.md  env  pyproject.toml
gino/: __main__.py  gitlab.py  notion.py
