[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gino"
version = "0.3.2"
description = "Gitlab <-> Notion"
authors = [{ name = "Dilawar Singh", email = "dilawar@subcom.tech" }]
requires-python = ">=3.9, <4"
readme = "README.md"
license = "AGPL"
dependencies = [
    "rich>=13.7.1,<14",
    "typer>=0.12.3,<0.13",
    "dateparser>=1.2.0,<2",
    "python-dotenv>=1.0.1,<2",
    "sentry-sdk>=2.1.1,<3",
    "python-gitlab>=4.4.0,<5",
    "urlextract>=1.9.0,<2",
    "validators>=0.28.1,<0.29",
    "notion-client>=2.2.1,<3",
    "notion2markdown>=0.2.0,<0.3",
]

[project.scripts]
gino = "gino.__main__:app"

[dependency-groups]
dev = ["pytest>=8.2.0,<9"]
